--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 </head>
 <body>
 
+
+  <center><button type="button" onclick="fox_on()">Fox!</button><button type="button" onclick="fox_off()">No Fox :(</button></center>
+  
 	<h1>Mozilla is cool</h1>
 
-  <img src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
+  <img id="fox" src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
 
   <p>At Mozilla, we're a global community of</p>
 
@@ -26,6 +29,9 @@
   <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
 
   <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+
+
+  <script src="scripts/main.js"></script>
 
 </body>
 </html>
