change 2 buttons to 1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 
-  <center><button type="button" onclick="fox_on()">Fox!</button><button type="button" onclick="fox_off()">No Fox :(</button></center>
+  <center><button id="fox_butt" type="button" onclick="fox_swap()">Hide Fox!</button></center>
   
 	<h1>Mozilla is cool</h1>
 
