--- a/index.html
+++ b/index.html
@@ -31,6 +31,36 @@
   <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
 
 
+  <!-- additional css exercise info -->
+
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam porta non felis et aliquam. Sed commodo tellus urna, nec venenatis purus blandit egestas. Mauris fringilla, urna et fermentum lobortis, magna eros posuere libero, vel dapibus tellus sem eget augue. Curabitur condimentum sit amet nibh in auctor. Integer in pharetra ante, id ornare eros. Nam gravida posuere magna. Aliquam faucibus tellus eget imperdiet mollis. Quisque facilisis vitae felis at lacinia. Maecenas quis sollicitudin ante. Praesent volutpat commodo sapien, at rhoncus erat scelerisque ut. Morbi eu sapien ipsum. Duis vestibulum vehicula feugiat. Nunc pellentesque ex massa, sit amet finibus nulla porta non. Nunc metus massa, aliquet efficitur fringilla eget, accumsan id dolor. Suspendisse auctor condimentum aliquet. Sed lobortis nec urna et venenatis.</p>
+
+  <p id="mainquote" class="quote"> "Web development is cool" - Bill Joe Smith </p>
+
+  <p>Curabitur tempor lectus urna, quis vestibulum libero congue ac. Mauris et est sodales, mollis mi quis, dignissim tortor. Donec vestibulum gravida lobortis. Vivamus aliquam odio nec lacus mattis, sit amet laoreet ante sagittis. Curabitur posuere iaculis arcu et mollis. Ut ut sem pellentesque, tincidunt lacus sit amet, sollicitudin velit. Integer vitae ornare nunc. Phasellus interdum auctor nisl, non imperdiet libero ultricies et. Nunc a porta diam. Cras eu dictum risus. Praesent commodo fringilla elementum.</p>
+
+  <p class="quote"> "Web development is cool" - Bill Joe Smith </p>
+
+  <p>Morbi auctor magna quam, sed consequat sem venenatis a. In tempus dolor purus, sit amet lobortis arcu feugiat in. Cras egestas urna metus, dapibus eleifend turpis rutrum et. Nunc laoreet, purus id pretium porta, massa augue lacinia nibh, sed dictum nunc elit id justo. Maecenas congue tempor quam, sed efficitur enim laoreet et. Nunc tincidunt interdum efficitur. Curabitur volutpat ligula nisi, vel varius erat faucibus congue. Fusce nisl massa, luctus quis commodo ut, hendrerit ac elit. Vivamus a maximus est, nec euismod enim. Sed vulputate erat quis vestibulum vulputate.</p>
+
+  <p>Nam ac interdum diam. Aliquam eu augue sit amet ex faucibus posuere a sed tellus. Nullam id mattis ex. Nunc eu felis consectetur, pulvinar leo id, finibus tellus. Mauris ac molestie eros, vel lobortis magna. Donec cursus, felis eu fermentum scelerisque, justo velit lacinia nulla, id varius ex sapien at metus. Proin arcu justo, consectetur in varius non, efficitur sit amet augue. Donec ultrices ante neque, ut maximus neque pharetra commodo. Nam faucibus, neque eget lacinia efficitur, dolor velit hendrerit ante, eget condimentum mauris massa vitae tortor. Vestibulum nec sollicitudin sapien.</p>
+
+  <p class="quote"> "JavaScript is the language of web browsers" - John Doe </p>
+
+  <p>Donec et lorem vitae turpis cursus vehicula a nec felis. Mauris dapibus hendrerit arcu at suscipit. Aenean quis molestie magna. Aliquam auctor sed purus in ultricies. Aenean sit amet sagittis dui. Ut lobortis non erat ac commodo. Phasellus gravida sapien diam, vel convallis ex pellentesque interdum. Donec aliquam arcu vitae nibh vehicula, at ultrices felis ultrices. Pellentesque porta est purus, sagittis ultrices ligula condimentum sit amet. Donec imperdiet est eget nisl sodales euismod.</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
   <script src="scripts/main.js"></script>
 
 </body>
